# prete-a-porter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: contract-tests.yml  docker-publish.yml  unit-tests.yml
.opencode/plans/: 2026-05-22-chat-persistence-design.md  2026-05-22-chat-persistence-plan.md  2026-05-26-env-var-implementations.md  2026-06-30-test-documentation-update.md
contracts/: .gitignore  README.md  homily-agent-contract.json  liturgy-agent-contract.json  pyproject.toml
contracts/tests/: conftest.py  test_chat_orchestrator_e2e.py  test_homily_agent_e2e.py  test_homily_contract.py  test_liturgy_agent_e2e.py  test_liturgy_contract.py  test_scenarios_e2e.py
docs/: DARK-DESIGN.md  Makefile  architecture.rst  code-review-report.html  conf.py  deployment.rst  index.rst  introduction.rst  pre-publishing-audit.md  testing.rst  troubleshooting.rst
docs/archived/: SPECIFICATION_PLAN.md
docs/backend/: index.rst
docs/backend/chat_orchestrator/: agent.rst  graph.rst  overview.rst  state.rst  tools.rst
docs/frontend/: index.rst
docs/plans/: e2e-test-plan.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: auth-flow.spec.ts  chat-connection.spec.ts  chat-persistence.spec.ts  dark-mode.spec.ts  security-auth.spec.ts
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/src/lib/: auth.ts  (+6 more)
prisma/: schema.prisma
support/: download.sh
(+63 files in other folders)
