[project]
name = "contracts"
version = "0.1.0"
description = "A2A contract tests for agent-to-agent communication"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.0.0",
    "a2a-protocol",
]

[tool.uv.sources]
a2a-protocol = { path = "../packages/a2a-protocol", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
timeout = 180
